@@ -195,46 +195,7 @@
 		</dict>
 	</array>
 	<key>OpenEditors</key>
-	<array>
-		<dict>
-			<key>Content</key>
-			<dict>
-				<key>PBXProjectModuleGUID</key>
-				<string>8B42809207FB45660083AE77</string>
-				<key>PBXProjectModuleLabel</key>
-				<string>VitaminSEEController.m</string>
-				<key>PBXSplitModuleInNavigatorKey</key>
-				<dict>
-					<key>Split0</key>
-					<dict>
-						<key>PBXProjectModuleGUID</key>
-						<string>8B42809307FB45660083AE77</string>
-						<key>PBXProjectModuleLabel</key>
-						<string>VitaminSEEController.m</string>
-						<key>bookmark</key>
-						<string>8B4280A007FB519A0083AE77</string>
-						<key>history</key>
-						<array>
-							<string>8B42809007FB44F40083AE77</string>
-						</array>
-					</dict>
-					<key>SplitCount</key>
-					<string>1</string>
-				</dict>
-				<key>StatusBarVisibility</key>
-				<true/>
-			</dict>
-			<key>Geometry</key>
-			<dict>
-				<key>Frame</key>
-				<string>{{0, 0}, {884, 593}}</string>
-				<key>PBXModuleWindowStatusBarHidden2</key>
-				<false/>
-				<key>RubberWindowFrame</key>
-				<string>87 63 884 635 0 0 1024 746 </string>
-			</dict>
-		</dict>
-	</array>
+	<array/>
 	<key>Perspectives</key>
 	<array>
 		<dict>
@@ -257,8 +218,6 @@
 			<key>Layout</key>
 			<array>
 				<dict>
-					<key>BecomeActive</key>
-					<true/>
 					<key>ContentConfiguration</key>
 					<dict>
 						<key>PBXBottomSmartGroupGIDs</key>
@@ -297,18 +256,16 @@
 							<key>PBXSmartGroupTreeModuleOutlineStateExpansionKey</key>
 							<array>
 								<string>29B97314FDCFA39411CA2CEA</string>
-								<string>8B6D010807CB178F009A76DA</string>
-								<string>080E96DDFE201D6D7F000001</string>
 							</array>
 							<key>PBXSmartGroupTreeModuleOutlineStateSelectionKey</key>
 							<array>
 								<array>
-									<integer>53</integer>
+									<integer>7</integer>
 									<integer>0</integer>
 								</array>
 							</array>
 							<key>PBXSmartGroupTreeModuleOutlineStateVisibleRectKey</key>
-							<string>{{0, 732}, {277, 339}}</string>
+							<string>{{0, 0}, {277, 339}}</string>
 						</dict>
 						<key>PBXTopSmartGroupGIDs</key>
 						<array/>
@@ -420,6 +377,8 @@
 							<string>0pt</string>
 						</dict>
 						<dict>
+							<key>BecomeActive</key>
+							<true/>
 							<key>ContentConfiguration</key>
 							<dict>
 								<key>PBXProjectModuleGUID</key>
@@ -456,9 +415,9 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>8B42806F07FB42C10083AE77</string>
+				<string>8B5279110801CDB90032F515</string>
 				<string>1CE0B1FE06471DED0097A5F4</string>
-				<string>8B42807007FB42C10083AE77</string>
+				<string>8B5279120801CDB90032F515</string>
 				<string>1CE0B20306471E060097A5F4</string>
 				<string>1CE0B20506471E060097A5F4</string>
 			</array>
@@ -471,7 +430,7 @@
 	<key>StatusbarIsVisible</key>
 	<true/>
 	<key>TimeStamp</key>
-	<real>133910938.94006333</real>
+	<real>134373141.48113883</real>
 	<key>ToolbarDisplayMode</key>
 	<integer>2</integer>
 	<key>ToolbarIsVisible</key>
@@ -486,8 +445,7 @@
 	<integer>5</integer>
 	<key>WindowOrderList</key>
 	<array>
-		<string>8B42806D07FB429D0083AE77</string>
-		<string>8B42809207FB45660083AE77</string>
+		<string>8B52790F0801CDB60032F515</string>
 		<string>1C0AD2B3069F1EA900FABCE6</string>
 		<string>/Users/elliot/Projects/VitaminSEE-bugfix/VitaminSEE.xcode</string>
 	</array>
@@ -580,8 +538,8 @@
 			<true/>
 			<key>TableOfContents</key>
 			<array>
-				<string>8B42806D07FB429D0083AE77</string>
-				<string>8B42806E07FB429D0083AE77</string>
+				<string>8B52790F0801CDB60032F515</string>
+				<string>8B5279100801CDB60032F515</string>
 				<string>1CD0528F0623707200166675</string>
 				<string>XCMainBuildResultsModuleGUID</string>
 			</array>
@@ -590,7 +548,7 @@
 			<key>WindowString</key>
 			<string>173 106 732 640 0 0 1024 746 </string>
 			<key>WindowToolGUID</key>
-			<string>8B42806D07FB429D0083AE77</string>
+			<string>8B52790F0801CDB60032F515</string>
 			<key>WindowToolIsVisible</key>
 			<false/>
 		</dict>
@@ -892,8 +850,8 @@
 										<string>yes</string>
 										<key>sizes</key>
 										<array>
-											<string>{{0, 0}, {363, 167}}</string>
-											<string>{{0, 176}, {363, 267}}</string>
+											<string>{{0, 0}, {365, 167}}</string>
+											<string>{{0, 176}, {365, 267}}</string>
 										</array>
 									</dict>
 									<key>VerticalSplitView</key>
@@ -942,9 +900,9 @@
 			<key>TableOfContents</key>
 			<array>
 				<string>1C0AD2B3069F1EA900FABCE6</string>
-				<string>8B42807207FB42C10083AE77</string>
+				<string>8B5279140801CDB90032F515</string>
 				<string>1CD0528B0623707200166675</string>
-				<string>8B42807307FB42C10083AE77</string>
+				<string>8B5279150801CDB90032F515</string>
 			</array>
 			<key>ToolbarConfiguration</key>
 			<string>xcode.toolbar.config.run</string>
